[tool.poetry]
name = "my-automation-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

#[[tool.poetry.source]]
#name = "paymaya_repository"
#url = "https://repo.corp.voyager.ph/repository/pypi-paymaya-public/simple"
#default = true

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.8"
requests = "2.21.0"
pydantic = "1.8.2"
docker = "^5.0.3"
redo = "^2.0.4"
Faker = "^13.3.4"
allure-pytest = "^2.9.45"
behave = "^1.2.6"
boto3 = "1.12.44"
allure-behave = "^2.9.45"
allure-python-commons = "^2.9.45"
docker-compose = "^1.26.2"
jwcrypto = "1.0"
oauthlib = "3.1.1"
setuptools = "49.6.0"
pycrypto = "2.6.1"
python-jwt = "2.0.1"
PyYAML = "5.3.1"
assertpy = "^1.1"

